Increase mobile smart highlight menu spacing from bottom to avoid bottom pop-up menu on pixel

--- a/frontend/src/components/lumi_reader/lumi_reader.scss
+++ b/frontend/src/components/lumi_reader/lumi_reader.scss
@@ -116,6 +116,6 @@ lumi-reader {
   .smart-highlight-menu-container {
     position: absolute;
     left: calc(50% - $smart-highlight-menu-width / 2);
-    bottom: common.$spacing-xl;
+    bottom: 75px;
   }
 }
